fixed images not loading
hopefully it works

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hero-content fade-in">
                 <div class="hero-image">
                     <a href = "https://www.mta.info/open-data   " target="_blank">
-                    <img src ="assets\images\mtaLogo.png" alt = "logo" width = "80vh" height = "80vh">
+                    <img src ="assets/images/mtaLogo.png" alt = "logo" width = "80vh" height = "80vh">
                     </a>
                 </div>
                 <div class="hero-text">
@@ -121,7 +121,7 @@
 
                     <div class="charts-container">
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder1')">
-                            <img src="\assets\images\exempt_vehicle_count.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
+                            <img src="assets\images\exempt_vehicle_count.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
                             <div class="chart-overlay">
                                 <div class="chart-title">Graph of Exempt Vehicle Count</div>
                                 <div class="chart-description" >This is a bar graph representing the exempt vehicle count for each exempt vehicle type.</div>
@@ -135,14 +135,14 @@
                             </div>
                         </div>
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder5')">
-                            <img src="\assets\images\exempt_pre_congestion.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
+                            <img src="assets\images\exempt_pre_congestion.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
                             <div class="chart-overlay">
                                 <div class="chart-title">Pre-Congestion Graph</div>
                                 <div class="chart-description" >This is a bar graph showing the exempt vehicle violations pre-congestion pricing </div>
                             </div>
                         </div>
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder6')">
-                            <img src="\assets\images\exempt_post_congestion.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
+                            <img src="assets\images\exempt_post_congestion.png" alt="Graph of Exempt Vehicle Count" class="chart-image"/>
                             <div class="chart-overlay">
                                 <div class="chart-title">Post-Congestion Graph</div>
                                 <div class="chart-description" >This is a bar graph showing the exempt vehicle violations post-congestion pricing</div>
@@ -192,7 +192,7 @@
                     
                     <div class="charts-container" id="oneCharts-container">
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder4')">
-                            <img src="/assets/images/bus_speed.png" alt="description" class="chart-image">
+                            <img src="assets\images\bus_speed.png" alt="description" class="chart-image">
                             <div class="chart-overlay">
                                 <div class="chart-title" >Bus Speed Depiction</div>
                                 <div class="chart-description" > This graph shows bus speed pre and post congestion pricing for numerous buses traveling through and in the CBD zone. </div>
@@ -230,14 +230,14 @@
                     
                     <div class="charts-container" id = "oneCharts-container">
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder3')">
-                            <img src="/assets/images/bike_graph.jpg" alt="Depiction of bike ridership from January 2024 to January 2025" class="chart-image">
+                            <img src="assets\images\bike_graph.jpg" alt="Depiction of bike ridership from January 2024 to January 2025" class="chart-image">
                             <div class="chart-overlay">
                                 <div class="chart-title" >Bike Ridership Map</div>
                                 <div class="chart-description" >This is a map that depicts bike ridership from January 2024 to January 2025</div>
                             </div>
                         </div>
                         <div class="chart-placeholder has-image" onclick="openImageModal('placeholder7')">
-                            <img src="/assets/images/citibike_speed.png" alt="Table of Citibike Speed" class="chart-image">
+                            <img src="assets\images\citibike_speed.png" alt="Table of Citibike Speed" class="chart-image">
                             <div class="chart-overlay">
                                 <div class="chart-title" >CitiBike Speed</div>
                                 <div class="chart-description" >This table depicts the bike speeds between the CBD zone and non-CBD areas from January 2024 to January 2025</div>
