Updated name logo
updated to be Datavengers_0

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">MTA Datathon 2025</div>
+            <div class="logo">Datavengers_0</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
