--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <br>
                             <p> 
                                 Due to the large amounts of data in the MTA ACE Violations dataset, we decided to
-                                narrowed our data down to focus on the occurences within the Manhathan's Central Business District
+                                narrowed our data down to focus on the occurrences within the Manhattan's Central Business District
                                 (CBD) zone which 
                                 also covers the congestion pricing zone. Congestion pricing went into effect
                                 January 5, 2025
