--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <div class="analysis-content">
                         <p>
                             We focused on the ACE violations of exempt vehicles before and after the implementation
-                            of congestion pricing. We first separated Manhathan buses from the dataset that contained buses throughout
+                            of congestion pricing. We first separated Manhattan buses from the dataset that contained buses throughout
                             the boroughs which we then found the amount of exempt vehicle violations that has been recorded by ACE.
                             We separated this dataset into two, before the implementation of congestion pricing and after to get a better
                             picture of ACE's role in our bus system.
