--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                                 The ratio for the parantransit and "other" exempt vehicles stayed relatively consistent 
                                 pre and post congestion pricing. While pre-congestion emergency vehicles were far in the lead, 
                                 post-congestion it was much more similar to a 1:1 ratio for emergency vehicles compared to commercial
-                                vehicles, each made up about 1/3 of the occurences.
+                                vehicles, each made up about 1/3 of the occurrences.
                             </li>
                         </ul>
                     </div>
